--- a/Templates/Designs/TTonlineNew/Custom/New_Sidebar-TopPart.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/New_Sidebar-TopPart.cshtml
@@ -13,6 +13,8 @@
     <div class="widget adwidget" style=" margin-top: 20px; margin-bottom:25px;" >
         @Include("Banners/BigBox2.cshtml")
     </div>
+    
+    @Include("Sidebar/New_Widget-Editorial.cshtml")
     @*Include("Sidebar/Widget-Facebook.cshtml")*@
     @*Include("Sidebar/Widget-Twitter.cshtml")*@
  
