--- a/Templates/Designs/TTonlineNew/Paragraph/New_ArticleSlider.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_ArticleSlider.cshtml
@@ -57,7 +57,9 @@
           
           <div class="featured-href">
             <figure class="image-overlay2">
-              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=760&Height=510' alt="{{itemTitlu}}"/>
+              <a  href="/Default.aspx?ID={{pagePageID}}" target="_blank">
+                <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=760&Height=510' alt="{{itemTitlu}}"/>
+              </a>
             </figure>
            
           <div class="featured-header">
@@ -85,7 +87,9 @@
         </div> 
           <div  class="featured-href">
             <figure class="image-overlay2">
-              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=365&Height=250' alt="{{itemTitlu}}"/>
+              <a href="/Default.aspx?ID={{pagePageID}}" target="_blank">
+                 <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=365&Height=250' alt="{{itemTitlu}}"/>
+              </a>
             </figure>
           
             <div class="featured-header">
@@ -115,7 +119,9 @@
           </div> 
              <div class="featured-href">
                <figure class="image-overlay2">
-              <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=365&Height=250' alt="{{itemTitlu}}"/>
+                  <a href="/Default.aspx?ID={{pagePageID}}" target="_blank">
+                     <img src='/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=365&Height=250' alt="{{itemTitlu}}"/>
+                  </a>
                </figure>
            
                <div class="featured-header">
