Problema cu harta pe paginile de companii profesional

--- a/Templates/Designs/TTonline/PaginaCompanie.cshtml
+++ b/Templates/Designs/TTonline/PaginaCompanie.cshtml
@@ -147,8 +147,9 @@ if(Contactform == true){
 }else{
 <div class="row row-companie mb-40  background-white">
 <div class="col-xs-12 col-titlu-companie"><h3> <i class="fa fa-globe fa-2x" aria-hidden="true"></i><span>Localizare</span></h3></div>
-	<!-- Harta Start-->
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 pbt-20">
+	<!-- Harta Start-->                                 
+	<h1>test</h1>
+	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 pbt-20">
         <div class="maps">                      
             <div id="map-canvas" class="premium-map-canvas" data-lat="" data-lng=""  data-geolocation='@Geolocatie' data-zoom="14"></div>                
             <div class="addresses-block">
