--- a/Templates/Designs/TTonlineNew/PaginaCompanie.cshtml
+++ b/Templates/Designs/TTonlineNew/PaginaCompanie.cshtml
@@ -167,8 +167,7 @@ if(Contactform == true){
 
 
 <!-- Google Analytics -->
-@*
-<script>
+@*<script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
 ga('create', 'UA-26068739-1', 'auto');
 
@@ -186,7 +185,7 @@ ga('set', 'dimension8', dw_bd_categorie);
 
 
 ga('send', 'pageview');
-</script>
+</script>*@
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 <!-- End Google Analytics -->
 
@@ -198,6 +197,5 @@ ga('send', 'pageview');
 
 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5941501b1be8de2c"></script> 
-*@
 
 
