- change social icons

--- a/Templates/Designs/TTonlineNew/Custom/Header.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Header.cshtml
@@ -10,7 +10,7 @@
                 <div class="container">
                         <div class="row header-first-row">
                             <div class="col-md-9 visible-lg visible-md" id="motto">
-                                    <a class="logo" href="/Defaul.aspx?ID=@firstPageId" title="" rel="home">
+                                    <a class="logo" href="/Default.aspx?ID=@firstPageId" title="" rel="home">
                                         <img src="@logo"> 
                                    </a><!-- .logo -->
                                    <h4 >Industry – Business Opportunities</h4>
@@ -28,8 +28,9 @@
 
                             </div> 
                             <div id="social-icon" class="social-icon">
+                                <a class="twitter" href='@Pageview.Area.Item["LinkedInLink"]' target="_blank">  <i class="fa fa-linkedin fa-2x  padding" aria-hidden="true"></i>  </a>
                                 <a class="facebook" href='@Pageview.Area.Item["FacebookLink"]' target="_blank"> <i class="fa fa-facebook fa-2x padding" aria-hidden="true"></i> </a>
-                                <a class="twitter" href='@Pageview.Area.Item["TwitterLink"]' target="_blank">  <i class="fa fa-twitter fa-2x  padding" aria-hidden="true"></i>  </a>
+                                <a class="twitter" href='@Pageview.Area.Item["YoutubeLink"]' target="_blank">  <i class="fa fa-youtube fa-2x  padding" aria-hidden="true"></i>  </a>
                             </div>
 
                          </div>
