--- a/Templates/Designs/TTonlineNew/eCom/ProductList/ShopFront.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/ProductList/ShopFront.cshtml
@@ -47,7 +47,7 @@ string NumarulTotalPagini = GetInteger("Ecom:ProductList.TotalPages") != null ? 
   </div>
   
     <div class="hidden filters-container" style="display:flex; width: 100%;">
-         @*@foreach (LoopItem facetGroup in GetLoop("FacetGroups"))
+         @foreach (LoopItem facetGroup in GetLoop("FacetGroups"))
          {
              foreach (LoopItem facet in facetGroup.GetLoop("Facets"))
              {
@@ -56,7 +56,7 @@ string NumarulTotalPagini = GetInteger("Ecom:ProductList.TotalPages") != null ? 
                  <div>@RenderFacetCategory(facet)</div>
                }
              }
-         }*@
+         }
          <button type="button" class="filter-btn">@Translate("Filtreaza")</button>
     </div>
   
