--- a/Templates/Designs/TTonlineNew/Editie.cshtml
+++ b/Templates/Designs/TTonlineNew/Editie.cshtml
@@ -110,9 +110,9 @@ ga('set', 'dimension1', dw_editie);
 ga('send', 'pageview');
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
-<!-- End Google Analytics -->
+<!-- End Google Analytics -->*@
 
-<script>*@
+<script>
 
   $(function(){
 
