--- a/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
+++ b/Templates/Designs/TTonlineNew/Includes/PageTemplates/MasterHelpers.cshtml
@@ -91,7 +91,9 @@ if (string.IsNullOrEmpty(System.Web.HttpContext.Current.Request.Params["ProductI
     }
     @*<link rel="stylesheet" href="@styleBundle" />*@
     @*<link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/css/custom.css"/>*@
-    <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/dist/custom.css?v=8" async/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    @* <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/dist/custom.css?v=8" async/> *@
+    <link rel="stylesheet" href="/Files/Templates/Designs/TTonlineNew/dist2/app.bundle.css?v=1"/>
    @* <script src="@scriptBundleHeader"></script>*@
     <script src="/Files/Templates/Designs/TTonlineNew/assets/js/00_jquery_1.11.2_.min.js"></script>
     @GetString("Javascripts")
