--- a/Templates/Designs/TTonlineNew/css/custom.less
+++ b/Templates/Designs/TTonlineNew/css/custom.less
@@ -1,7 +1,3 @@
-/*@import url(https://fonts.googleapis.com/css?family=Lato:300,400);*/
-/*@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);*/
-
-
 .searchwidget-form button {
 	background: none;
 	color: #7a7a7a;
@@ -21,7 +17,10 @@
 .footer-menu {
 	margin: 0;
 	padding: 0;
-	list-style: none
+	list-style: none;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	column-gap: 10px;
 }
 .footer-menu li {
 	margin: 0 0 7px;
@@ -177,7 +176,7 @@
 }
 
 .body-color4 .logo span,
-.body-color4 .sb-search.sb-search-open .sb-icon-search,
+.body-color4 .sb-search .sb-icon-search,
 .body-color4 .no-js .sb-search .sb-icon-search {
 	background: #fff;
 	color: #00acec
@@ -233,7 +232,7 @@
 }
 
 .body-color5 .logo span,
-.body-color5 .sb-search.sb-search-open .sb-icon-search,
+.body-color5 .sb-search .sb-icon-search,
 .body-color5 .no-js .sb-search .sb-icon-search {
 	background: #fff;
 	color: #89b21c
@@ -262,7 +261,7 @@
 
 
 .body-color6 .logo span,
-.body-color6 .sb-search.sb-search-open .sb-icon-search,
+.body-color6 .sb-search .sb-icon-search,
 .body-color6 .no-js .sb-search .sb-icon-search {
 	background: #fff;
 	color: #1d1d1d
@@ -370,7 +369,7 @@
 	background: #fff;
 	display: block;
 	font-size: 12px;
-	padding: 20px 0
+	padding: 20px;
 }
 
 .formtable {
@@ -1263,7 +1262,14 @@ li.active a {
 }
 
 .alte-produse-row h4 {
-	font-weight: normal
+	font-weight: normal;
+	border-bottom: 2px solid #fff;
+}
+.alte-produse-row h4 span {
+	border-bottom: 2px solid #ffa700;
+	padding-bottom: 1px;
+	color: #ffa700;
+	font-weight: 700;
 }
 
 .alte-produse-row {
@@ -1506,7 +1512,12 @@ span.seeMoreSubcategorie {
 	padding-left: 40px;
 	padding-right: 40px
 }
-
+.col-descriere-produs-compare table {
+	width: auto !important;
+}
+.col-descriere-produs-compare td {
+	padding: 2px 5px;
+}
 .industry-background {
 	background: none;
 	box-shadow: none
@@ -2722,7 +2733,9 @@ td strong {
 .product-search button {
 	border: none;
 	background-color: #fff;
-	color: #bbb
+	color: #bbb;
+	height: 30px;
+	width: 33px;
 }
 
 .result-query {
@@ -3020,7 +3033,7 @@ div.sticky.bottom {
 	position: fixed;
 	top: 2rem;
 	right: 2rem;
-	width: 100px;
+	width: 200px;
 	z-index: 9999;
 	opacity: 0;
 	transition: all .3s ease-out
@@ -9085,7 +9098,18 @@ button.close {
 	overflow: scroll
 }
 
-
+.modal#NewsletterSignUp {
+	z-index: 1050;
+	/*display: block;*/
+	opacity: 1;
+	top: 5%;
+	right: 2%;
+	left: auto;
+	bottom: auto;
+}
+#NewsletterSignUp .adwidget {
+	margin-bottom: 0px;
+}
 .tooltip {
 	position: absolute;
 	z-index: 1070;
@@ -10177,15 +10201,12 @@ only screen and (min-device-pixel-ratio:1.5) {
 }
 
 #tiptip_content {
-	font-size: 11px;
-	color: #fff;
-	text-shadow: 0 0 2px black;
+	font-size: 14px;
+	color: #000;
 	padding: 4px 8px;
 	border: 1px solid rgba(255, 255, 255, .25);
-	background-color: rgba(25, 25, 25, .92);
-	background-image: linear-gradient(transparent, black);
+	background-color: #fff;
 	border-radius: 3px;
-	box-shadow: 0 0 3px #555
 }
 
 #tiptip_arrow,
@@ -10241,10 +10262,10 @@ only screen and (min-device-pixel-ratio:1.5) {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	#tiptip_content {
 		padding: 4px 8px 5px 8px;
-		background-color: rgba(45, 45, 45, .88)
+		background-color: #fff;
 	}
 	#tiptip_holder.tip_bottom #tiptip_arrow_inner {
-		border-bottom-color: rgba(45, 45, 45, .88)
+		border-bottom-color: #fff
 	}
 	#tiptip_holder.tip_top #tiptip_arrow_inner {
 		border-top-color: rgba(20, 20, 20, .92)
@@ -10349,7 +10370,7 @@ only screen and (min-device-pixel-ratio:1.5) {
 	display: none
 }
 
-@charset 'UTF-8';
+
 .slick-loading .slick-list {
 	/*
 	background: #fff url('./ajax-loader.gif') center center no-repeat
@@ -10381,6 +10402,7 @@ only screen and (min-device-pixel-ratio:1.5) {
 	color: transparent;
 	border: none;
 	outline: none;
+	z-index: 9;
 	background: transparent
 }
 
@@ -10407,17 +10429,17 @@ only screen and (min-device-pixel-ratio:1.5) {
 
 .slick-prev:before,
 .slick-next:before {
-	font-family: 'slick';
+	font-family: 'FontAwesome';
 	font-size: 20px;
 	line-height: 1;
 	opacity: .75;
-	color: #fff;
+	color: #c1c1c1;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale
 }
 
 .slick-prev {
-	left: -25px
+	left: 0;
 }
 
 [dir='rtl'] .slick-prev {
@@ -10426,15 +10448,15 @@ only screen and (min-device-pixel-ratio:1.5) {
 }
 
 .slick-prev:before {
-	content: '←'
+	content: "\f053"
 }
 
 [dir='rtl'] .slick-prev:before {
-	content: '→'
+	content: "\f053"
 }
 
 .slick-next {
-	right: -25px
+	right: 0;
 }
 
 [dir='rtl'] .slick-next {
@@ -10443,11 +10465,11 @@ only screen and (min-device-pixel-ratio:1.5) {
 }
 
 .slick-next:before {
-	content: '→'
+	content: "\f054"
 }
 
 [dir='rtl'] .slick-next:before {
-	content: '←'
+	content: "\f054"
 }
 
 .slick-dotted.slick-slider {
@@ -10501,7 +10523,7 @@ only screen and (min-device-pixel-ratio:1.5) {
 
 .slick-dots li button:before {
 	font-family: 'slick';
-	font-size: 6px;
+	font-size: 40px;
 	line-height: 20px;
 	position: absolute;
 	top: 0;
@@ -10518,7 +10540,7 @@ only screen and (min-device-pixel-ratio:1.5) {
 
 .slick-dots li.slick-active button:before {
 	opacity: .75;
-	color: #000
+	color: #fbae28
 }
 
 .select2-container {
@@ -11272,7 +11294,24 @@ only screen and (min-device-pixel-ratio:1.5) {
 	-webkit-animation-name: fadeOut;
 	animation-name: fadeOut
 }
-
+.owl-dots {
+	display: flex;
+	justify-content: center;
+}
+.owl-dots .owl-dot {
+	display: block;
+	height: 10px;
+	width: 10px;
+	background: #aaa;
+	margin: 0 5px;
+	border-radius: 50%;
+}
+.owl-dots .owl-dot.active {
+	background: #fbae28;
+}
+.companii-background .owl-dots {
+	margin-top: 10px;
+}
 @-webkit-keyframes fadeOut {
 	0% {
 		opacity: 1
@@ -11427,7 +11466,131 @@ only screen and (min-device-pixel-ratio:1.5) {
 	-webkit-animation-duration: 2s;
 	animation-duration: 2s
 }
-
+/*custom dropddown*/
+.filter-btn {
+	background: #ff6633;
+	border: none;
+	padding: 7px;
+	color: #fff;
+}
+.product-filters {
+	width: 240px;
+	margin-right: .6em;
+}
+.dropdown-trigger {
+	visibility: hidden;
+	position: absolute;
+}
+.dropdown {
+	position: relative;
+	display: inline-block;
+	text-align: left;
+}
+.dropdown__btn {
+	cursor: pointer;
+	border: 1px solid #d3d3d3;
+	padding: .6em;
+	margin-bottom: 0;
+	background-color: #fff;
+	height: 38px;
+	line-height: 22px;
+	font-weight: normal;
+	text-align: left;
+	width: 100%;
+}
+.dropdown__content {
+	text-align: left;
+	overflow: auto;
+	max-height: 0;
+	max-height: 450px;
+	position: absolute;
+	width: 100%;
+	z-index: 100;
+	background-color: #fff;
+	border: 1px solid #d3d3d3;
+	box-shadow: 0 3px 6px rgb(0 0 0 / 18%);
+	display: none;
+	padding: 10px;
+}
+.dropdown-trigger-off {
+	display: none;
+	background-color: rgba(0,0,0,.3);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 90;
+	left: 0;
+	top: 0;
+}
+.dropdown-trigger:checked+.dropdown .dropdown__content {
+	display: block;
+}
+input[type="checkbox"].form__control {
+	display: inline;
+	opacity: 0;
+	width: 1px;
+	height: 1px;
+	position: absolute;
+	top: 14px;
+	left: 8px;
+}
+input[type="checkbox"].form__control+label.checkbox-facet {
+	display: flex;
+}
+input[type="checkbox"].form__control+label {
+	position: relative;
+	line-height: 17px;
+}
+.checkbox-facet {
+	margin-bottom: .6em;
+}
+input[type="checkbox"].form__control+label::before {
+	content: "";
+	width: 17px;
+	height: 17px;
+	border: 1.6px #b1b1b1 solid;
+	display: inline-block;
+	margin-right: 5px;
+	vertical-align: top;
+	border-radius: .4rem;
+	transition: all .3s ease;
+}
+input[type="checkbox"].form__control:checked+label::after {
+	content: "";
+	height: 5px;
+	width: 10px;
+	border-left: 2px #545454 solid;
+	border-bottom: 2px #545454 solid;
+	transform: rotate(
+			-45deg
+	);
+	left: 4px;
+	top: 5px;
+	display: inline-block;
+	position: absolute;
+}
+.checkbox-facet__label{
+	width: 200px;
+	font-size: 14px;
+}
+.checkbox-facet:hover {
+	cursor: pointer;
+}
+.dropdown__btn::after {
+	font-family: "fontAwesome";
+	font-weight: 300;
+	content: '\f078';
+	margin-left: .6em;
+	position: absolute;
+	right: .6em;
+}
+.dropdown-trigger:checked+.dropdown .dropdown__btn::after {
+	font-family: "fontAwesome";
+	font-weight: 300;
+	content: '\f077';
+	float: right;
+}
+/*custom dropddown*/
 @-webkit-keyframes bounce {
 	0%,
 	100%,
@@ -17101,20 +17264,19 @@ body.background-image4 {
 
 .sb-search-input {
 	position: absolute;
-	top: 9px;
+	top: 6px;
 	right: 4px;
 	border: none;
 	outline: none;
-	background: #fff;
 	width: 100%;
 	max-width: 230px;
 	font-size: 14px;
-	height: 45px;
+	height: 50px;
 	margin: 0;
 	z-index: 10;
-	padding: 20px 55px 20px 16px
+	padding: 20px 55px 20px 16px;
+	background: #f4f4f4;
 }
-
 .sb-icon-search,
 .sb-search-submit {
 	width: 50px;
@@ -17147,7 +17309,7 @@ body.background-image4 {
 .sb-icon-search {
 	position: absolute;
 	z-index: 110;
-	width: 0%;
+	width: 0;
 	min-width: 30px;
 	height: 50px;
 	float: right;
@@ -17158,26 +17320,30 @@ body.background-image4 {
 	transition: width .3s;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
-	background: #fff
+	background: #fbae28;
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .sb-icon-search:hover {
 	color: #222
 }
 
-.sb-search.sb-search-open,
+.sb-search,
 .no-js .sb-search {
 	width: 200px
 }
 
-.sb-search.sb-search-open .sb-icon-search,
+.sb-search .sb-icon-search,
 .no-js .sb-search .sb-icon-search {
 	background: #ffa700;
 	color: #fff;
 	z-index: 11
 }
 
-.sb-search.sb-search-open .sb-search-submit,
+.sb-search .sb-search-submit,
 .no-js .sb-search .sb-search-submit {
 	z-index: 110
 }
@@ -17545,7 +17711,9 @@ a.navbar-toggle:active {
 	max-width: 1170px;
 	margin: 100px 0 0
 }
-
+.sidebar-stop .ad728-wrapper {
+	margin: 30px 0 0;
+}
 .ad728-wrapper a {
 	display: block
 }
@@ -19244,7 +19412,7 @@ a img.aligncenter {
 	margin-bottom: 50px;
 	text-align: center;
 	padding: 20px;
-	border: 2px solid #dadada
+	//border: 2px solid #dadada
 }
 
 .sticky-sidebar .adwidget {
@@ -19969,7 +20137,7 @@ body.dark-skin,
 }
 
 .body-color2 .logo span,
-.body-color2 .sb-search.sb-search-open .sb-icon-search,
+.body-color2 .sb-search .sb-icon-search,
 .body-color2 .no-js .sb-search .sb-icon-search {
 	background: #fff;
 	color: #ffa700
@@ -20020,7 +20188,7 @@ body.dark-skin,
 }
 
 .body-color3 .logo span,
-.body-color3 .sb-search.sb-search-open .sb-icon-search,
+.body-color3 .sb-search .sb-icon-search,
 .body-color3 .no-js .sb-search .sb-icon-search {
 	background: #fff;
 	color: #ff4106
@@ -20845,7 +21013,12 @@ body.dark-skin,
 #LoopStiri {
 	clear: both
 }
-
+.lang-ro #UltimeleStiri {
+	height: 1065px;
+}
+.lang-ro #UltimeleStiri .simple-thumb {
+	width: 250px !important;
+}
 #myCarousel .description {
 	height: 150px;
 	overflow: hidden
@@ -21058,7 +21231,7 @@ body.dark-skin,
 
 #LoopAutor {
 	display: grid;
-	grid-template-columns: 80% 20%;
+	/*grid-template-columns: 80% 20%;*/
 	border-bottom: 2px solid #d6d6d6
 }
 
@@ -21138,6 +21311,12 @@ body.dark-skin,
 }
 
 @media(max-width: 768px) {
+	.carousel-companii .news-block {
+		margin-bottom: 0;
+	}
+	.lang-ro .homepage-shop {
+		height: 580px;
+	}
 	.lang-ro .flexslider {
 		height: 1392px;
 	}
@@ -21148,55 +21327,20 @@ body.dark-skin,
 	.lang-ro .homepage-sectiune.col-md-4 {
 		height: 365px;
 	}
-	.lang-ro #UltimeleStiri {
-		height: 525px;
-	}
-	.lang-ro .companii-background {
-		height: 520px;
-	}
+		
 	.ad728-wrapper {
 		min-height: 80px !important;
 		margin: 40px 0 0;
 	}
-}
-@media(max-width: 448px) {
-	.lang-ro .flexslider {
-		height: 780px;
+	.sidebar-stop .ad728-wrapper {
+		margin: 15px 0 0;
 	}
+	.footer {
+		margin: 10px 0 0;
+	}
+	
+}
 
-	.lang-ro .homepage-sectiune {
-		height: 720px;
-	}
-	.lang-ro .homepage-sectiune.col-md-4 {
-		height: 330px;
-	}
-	.lang-ro #UltimeleStiri {
-		height: 560px;
-	}
-	.lang-ro .companii-background {
-		height: 430px;
-		margin-bottom: 20px;
-	}
-	.mag-content {
-		margin-bottom: 10px !important;
-	}
-	.ad728-wrapper {
-		min-height: 30px !important;
-		margin: 40px 0 0;
-	}
-	.twocol-image-nosummary .small-block .news-details {
-		position: initial;
-	}
-	.small-block .news-title {
-		min-height: auto;
-		font-size: 14px;
-		line-height: 16px;
-		max-height: initial;
-	}
-	.twocol-image-nosummary .news-block {
-		margin-bottom: 30px;
-	}
-}
 
 
 
@@ -21863,6 +22007,9 @@ body.dark-skin,
 	}
 }
 @media(max-width:991px) {
+	.lang-ro .companii-background {
+		height: 450px;
+	}
 	.fixed-button,
 	.fixed-sidebar .fixed-button {
 		display: inline-block
@@ -21931,8 +22078,8 @@ body.dark-skin,
 	.fixed-left-sidebar .widget-content li h3 a {
 		font-family: "Roboto", sans-serif;
 		font-weight: bold;
-		font-size: 30px;
-		line-height: 34px
+		font-size: 18px;
+		line-height: 24px
 	}
 	.fixed-left-sidebar .news-details {
 		margin: 15px 0 0 0;
@@ -21951,16 +22098,20 @@ body.dark-skin,
 		left: 15px
 	}
 	.tag-list {
-		height: 30px
+		height: 30px;
+		overflow-x: scroll;
+		width: 100%;
+		display: flex;
 	}
 	.tag-list li {
-		font-size: 14px;
+		font-size: 12px;
 		line-height: 29px
 	}
 	.tag-list li a {
-		font-size: 13px;
+		font-size: 12px;
 		line-height: 26px;
-		padding: 0 8px
+		padding: 0 4px;
+		width: max-content;
 	}
 	.widget {
 		margin-bottom: 20px
@@ -22501,12 +22652,16 @@ body.dark-skin,
 	}
 	.small-block .news-title {
 		min-height: 70px
+	}	
+	
+}
+@media(max-width:767px) {
+	.lang-ro .companii-background {
+		height: 520px;
 	}
 	.companii-background {
 		margin-bottom: 75px
 	}
-}
-@media(max-width:767px) {
 	.featured-big .image-overlay {
 		height: 300px
 	}
@@ -22629,9 +22784,12 @@ body.dark-skin,
 	.fixed-left-sidebar .widget-content li h3,
 	.fixed-left-sidebar .widget-content li h3 a {
 		font-family: "Roboto", sans-serif;
-		font-size: 20px;
+		font-size: 18px;
 		line-height: 24px;
 		font-weight: bold
+	}
+	.small-block .news-title {
+		max-height: 170px;
 	}
 	.page-header .page-title {
 		font-size: 28px;
@@ -22785,6 +22943,10 @@ body.dark-skin,
 	.navbar-nav .open .dropdown-menu>li>a:hover {
 		background-image: none
 	}
+	.onecol-image-nosummary-small h3 {
+		font-size: 16px;
+		line-height: 20px;
+	}
 }
 
 @media(max-width:545px) {
@@ -22805,6 +22967,22 @@ body.dark-skin,
 	}
 }
 @media screen and (max-width:480px) {
+	.row.main-body {
+		padding: 0 20px;
+	}
+	.alte-produse-row .col-xs-6 {
+		margin-bottom: 10px;
+	}
+	#dw-form-3 .formtable input[type="text"],
+	#dw-form-4 .formtable input[type="text"],
+	#dw-form-3 .formtable textarea,
+	#dw-form-4 .formtable textarea{
+        min-width: 100px;
+        width: 170px;
+	}
+	#dw-form-3 label, #dw-form-4 label {
+		width: 180px;
+	}
 	ul.tabs {
 		width: 100%
 	}
@@ -22864,6 +23042,92 @@ body.dark-skin,
 	}
 	.subheader {
 		margin: 0 -15px
+	}
+}
+@media(max-width: 448px) {
+	.lang-ro .flexslider {
+		height: 780px;
+	}
+
+	.lang-ro .homepage-sectiune {
+		height: auto;
+	}
+	.lang-ro .homepage-sectiune.col-md-4 {
+		height: 330px;
+	}
+	.lang-ro #UltimeleStiri {
+		height: 1700px;
+	}
+	.lang-ro #UltimeleStiri article{
+		display: grid;
+	}
+	.lang-ro #UltimeleStiri .simple-thumb {
+		width: 100% !important;
+	}
+	.lang-ro #UltimeleStiri img {
+		width: 100%;
+	}
+	.separator-articole h3 {
+		min-height: 35px;
+	}
+	.lang-ro .companii-background {
+		height: 100%;
+		margin-bottom: 20px;
+	}
+	.lang-ro .admag-block .companii-background {
+		height: 460px;
+		margin-bottom: 20px;
+	}
+	.companii-background .owl-dots {
+		margin-top: 0;
+	}
+	.lang-ro .row.main-body {
+		margin-top: 0;
+	}
+	.filtrare.companii-background .sortare-companii, .filtrare.companii-background .col-sortare, .sortare-companii .company-search {
+		padding: 0 !important;
+	}
+	.sortare-companii .company-search {
+		margin-bottom: 10px !important;
+	}
+	.sortare-companii .company-search input {
+		width: 85%;		
+	}
+	.filtrare.companii-background .sortare-litere, .filtrare.companii-background .sibling  {
+		padding-left: 0 !important;
+		padding-right: 0 !important;
+		margin: 1em 0 !important;
+	}
+	.mag-content .col-companie .news-block.small-block {
+		position: relative;
+		padding-bottom: 80px;
+		margin-bottom: 65px;
+	}
+	.mag-content {
+		margin-bottom: 10px;
+	}
+	.admag-block .recomandari, .lang-ro .homepage-sectiune {
+		padding: 0 !important;
+	}
+	.ad728-wrapper {
+		min-height: 30px !important;
+		margin: 40px 0 0;
+	}
+	.twocol-image-nosummary .small-block .news-details {
+		position: initial;
+	}
+	.small-block .news-title {
+		min-height: auto;
+		font-size: 14px;
+		line-height: 16px;
+		max-height: initial;
+	}
+	.twocol-image-nosummary .news-block {
+		margin-bottom: 30px;
+	}
+	.blog-content img {
+		width: 100% !important;
+		height: auto !important;
 	}
 }
 @media(max-width:450px) {
