--- a/Templates/Designs/TTonlineNew/Master.cshtml
+++ b/Templates/Designs/TTonlineNew/Master.cshtml
@@ -79,6 +79,20 @@ var scriptBundleFooter = Dna.Optimizer.Renderer.RenderScripts(string.Format("{0}
                 
                     if (isMobile)
                     {
+                  <!-- Begin iBuySmart Sticky Mobile Banner -->
+                  <div class="mag-content clearfix " style="margin-bottom: 30px; padding-left: 0px; padding-right: 0px;">
+                      <div class="row">
+                          <div class="col-md-12">
+                     
+                              <div class="ad728-wrapper-mobile" style="min-height:145px;">
+                                  @Include("Custom/Banners/MobileLeaderboardSticky.cshtml")
+                              </div>
+                     
+                          </div>
+                      </div>
+                  </div>
+                  <!-- End iBuySmart Sticky Mobile Banner -->
+
                         <div class="subheader row" style="@culoareFundal">
                             <div class="row">
                                 <div class="col-xs-7">
