--- a/Templates/Designs/TTonlineNew/Paragraph/New_LoopRevista.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_LoopRevista.cshtml
@@ -37,11 +37,14 @@
 </div>
 
 <script id="SectiuniRevistaTemplate" type="text/x-handlebars-template">
-    {{#each SectionsContainer}}        
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 sectiune-revista">        
-             <a href="/Default.aspx?ID={{itemId}}"><img src='/Admin/Public/GetImage.ashx?Image={{itemImagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=300&Height=250' alt="{{itemTitle}}" /></a>               
+    {{#each SectionsContainer as |section index|}}        
+        {{#ifCond index '==' '5'}}
+        <div class="hidden col-xs-12 col-sm-6 col-md-4 col-lg-4 sectiune-revista" data-banner></div>
+        {{/ifCond}}
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 sectiune-revista" data-index="{{index}}">        
+             <a href="/Default.aspx?ID={{section.itemId}}"><img src='/Admin/Public/GetImage.ashx?Image={{section.itemImagine}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=300&Height=250' alt="{{section.itemTitle}}" /></a>               
              <header>
-                 <p><a href="/Default.aspx?ID={{itemId}}">{{itemTitle}}</a></p>
+                 <p><a href="/Default.aspx?ID={{section.itemId}}">{{section.itemTitle}}</a></p>
              </header>        				
         </div>
     {{/each}}
