--- a/Templates/Designs/TTonlineNew/Page.cshtml
+++ b/Templates/Designs/TTonlineNew/Page.cshtml
@@ -261,6 +261,9 @@
                 <!-- Go to www.addthis.com/dashboard to customize your tools --> 
                 <div class="addthis_inline_share_toolbox"></div>              
               </div> 
+              <div class="hidden" data-banner>
+                   @Include("Custom/Banners/MobileLeaderboardMain.cshtml")
+              </div>
               <div class="author-section" data-template="AuthorsTemplate" data-json-feed="Default.aspx?ID=@autorPageID&redirect=false&Autor=">
               </div>                              
             </div>             
